--- a/sdfg.html
+++ b/sdfg.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html >  
 <html>  
 <head>  
-<title> page title</title>  
+<title></title>  
 </head>  
 <body>  
 <p>  
-<a href="#" onClick="alert('Welcome !');">Click Me</a>  
+<a href="#" onClick="alert('FUCK YOU');">Click Me</a>  
 </p>  
-<p> in this example we saw how to use inline JavaScript or directly in an HTML tag. </p>  
+<p></p>  
+<script>Console.log("thehen19 lol") </script>
 </body>  
 </html>  
